--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ actix-identity = "0.5.2"
 actix-cors = "0.6.2"
 serde = { version = "1.0", features = ["derive"] }
 env_logger = "0.8.4"
+log = "0.4.0"
