--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ actix-cors = "0.6.2"
 serde = { version = "1.0", features = ["derive"] }
 env_logger = "0.8.4"
 log = "0.4.0"
+serde_json = "1.0.96"
