--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 env_logger = "0.8.4"
 log = "0.4.0"
 serde_json = "1.0.96"
+serde_qs = "0.12.0"
