--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ env_logger = "0.8.4"
 log = "0.4.0"
 serde_json = "1.0.96"
 serde_qs = "0.12.0"
+isabelle-dm = { "git" = "ssh://git@github.com/isabelle-platform/isabelle-dm.git" }
+
