--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ log = "0.4.0"
 serde_json = "1.0.96"
 serde_qs = "0.12.0"
 isabelle-dm = { "git" = "ssh://git@github.com/isabelle-platform/isabelle-dm.git" }
-
+lettre = "0.10.4"
