--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ serde_qs = "0.12.0"
 isabelle-dm = { "git" = "ssh://git@github.com/isabelle-platform/isabelle-dm.git" }
 lettre = "0.10.4"
 now = "0.1.3"
+actix-multipart = "0.6.1"
+futures-util = "0.3.29"
