Run rustup non-interactively

--- a/tools/build-env/Dockerfile_ubuntu_2204
+++ b/tools/build-env/Dockerfile_ubuntu_2204
@@ -5,4 +5,4 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install -y curl
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
