--- a/tools/build-env/Dockerfile_ubuntu_2204
+++ b/tools/build-env/Dockerfile_ubuntu_2204
@@ -3,6 +3,6 @@ FROM ubuntu:22.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
-    apt-get install -y curl
+    apt-get install -y build-essential cargo curl
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
