Create Cargo folder

--- a/tools/build-env/Dockerfile_ubuntu_2204
+++ b/tools/build-env/Dockerfile_ubuntu_2204
@@ -6,3 +6,5 @@ RUN apt-get update && \
     apt-get install -y build-essential cargo curl
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+RUN mkdir /.cargo && chmod -R 777 /.cargo
