--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ env_logger = "0.8.4"
 log = "0.4.0"
 serde_json = "1.0.96"
 serde_qs = "0.12.0"
-isabelle-dm = { "git" = "ssh://git@github.com/isabelle-platform/isabelle-dm.git" }
+isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm" }
 lettre = "0.10.4"
 now = "0.1.3"
 actix-multipart = "0.6.1"
