--- a/tools/build-env/Dockerfile_ubuntu_2304
+++ b/tools/build-env/Dockerfile_ubuntu_2304
@@ -2,6 +2,9 @@ FROM ubuntu:23.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+RUN mkdir -p /home/root
+ENV HOME="/home/root"
+
 RUN apt-get update && \
     apt-get install -y build-essential cargo curl libssl-dev pkg-config
 
@@ -9,4 +12,4 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
 RUN mkdir /.cargo && chmod -R 777 /.cargo
 
-ENV PATH="/root/.cargo/bin:${PATH}"
+ENV PATH="/home/root/.cargo/bin:${PATH}"
