Make folder with parents

--- a/tools/build-env/Dockerfile_ubuntu_2304
+++ b/tools/build-env/Dockerfile_ubuntu_2304
@@ -10,6 +10,6 @@ RUN apt-get update && \
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
-RUN mkdir /home/root/.cargo && chmod -R 777 /home/root/.cargo
+RUN mkdir -p /home/root/.cargo && chmod -R 777 /home/root/.cargo
 
 ENV PATH="/home/root/.cargo/bin:${PATH}"
