--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,6 @@ actix-multipart = "0.6.1"
 futures-util = "0.3.29"
 argon2 = "0.5.2"
 rand = "0.8.5"
-mongodb = "2.7.1"
+mongodb = { version = "2.7.1", features = [ "tokio-sync" ] }
+async-trait = "0.1.74"
+
