--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4.0"
 serde_json = "1.0.96"
 serde_qs = "0.12.0"
 isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm" }
+isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api" }
 lettre = "0.10.4"
 now = "0.1.3"
 actix-multipart = "0.6.1"
@@ -26,3 +27,7 @@ rand = "0.8.5"
 mongodb = { version = "2.7.1", features = [ "tokio-sync" ] }
 async-trait = "0.1.74"
 bson = { version = "2.9.0", features = ["serde_with"] }
+tokio = "1.37.0"
+lazy_static = "1.4.0"
+parking_lot = "0.12.1"
+
