--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ bson = { version = "2.9.0", features = ["serde_with"] }
 tokio = "1.37.0"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
-
+once_cell = "1.19.0"
