--- a/tools/build-env/Dockerfile_ubuntu_2304
+++ b/tools/build-env/Dockerfile_ubuntu_2304
@@ -6,7 +6,7 @@ RUN mkdir -p /home/root
 ENV HOME="/home/root"
 
 RUN apt-get update && \
-    apt-get install -y build-essential cargo curl git libssl-dev pkg-config
+    apt-get install -y build-essential cargo curl git libssl-dev patchelf pkg-config
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
