--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.96"
 serde_qs = "0.12.0"
 tokio = "1.37.0"
+
+[features]
+full_file_database = []
