Make Cargo executable

--- a/tools/build-env/Dockerfile_ubuntu_2404
+++ b/tools/build-env/Dockerfile_ubuntu_2404
@@ -10,4 +10,6 @@ RUN apt-get update && \
 
 RUN /bin/bash -c "curl --proto '=https' --tlsv1.2 -sSf curl https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env && rustup update"
 
-ENV PATH="/home/root/.cargo/bin:${PATH}"
+RUN chmod -R 777 /root
+
+ENV PATH="/root/.cargo/bin:${PATH}"
