--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-p
 lazy_static = "1.4.0"
 lettre = "0.10.4"
 log = "0.4.0"
-mongodb = { version = "2.7.1", features = [ "tokio-sync" ] }
+mongodb = { version = "3.1.1"  }
 now = "0.1.3"
 parking_lot = "0.12.1"
 rand = "0.8.5"
