--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "isabelle-core"
-version = "1.9.2"
+version = "1.9.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix-cors = "0.6.4"
+actix-files = "0.6.6"
 actix-identity = "0.6.0"
 actix-multipart = "0.6.1"
 actix-rt = "2.10.0"
@@ -21,7 +22,7 @@ cron = "0.12.1"
 env_logger = "0.8.4"
 futures-util = "0.3.29"
 isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm", tag = "1.4.1" }
-isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api", tag = "1.8.0" }
+isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api", tag = "1.9.0" }
 lazy_static = "1.4.0"
 lettre = { version = "0.11.11", features = ["rustls-tls", "smtp-transport", "pool", "hostname", "builder"], default-features = false }
 log = "0.4.0"
